--- a/src/componentes/card-fingerprint/card-fingerprint.component.html
+++ b/src/componentes/card-fingerprint/card-fingerprint.component.html
@@ -11,7 +11,7 @@
     <ng-template #imageUrl>
         <!-- <ion-avatar [attr.item-start]="itemStart"> -->
         <div>
-            <img class="user-letter-image" src={{profileImageUrl}}
+            <img class="user-letter-image" src={{fingerprint.photo_url}}
                 onError="this.src='../../images/personIcon.png';">
         </div>
     </ng-template>
