--- a/src/pages/fingerprints-exists/fingerprints-exists.component.html
+++ b/src/pages/fingerprints-exists/fingerprints-exists.component.html
@@ -10,4 +10,5 @@
 <card-fingerprint
   *ngIf="fingerprint" 
   [fingerprint]="fingerprint"
+  [buttonClose]="'true'"
   (onClose)=clear()></card-fingerprint>
